# ai-agent-interview-assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260511_0001_create_interview_tables.py  20260511_0002_add_interview_plan_critiques.py  20260515_0003_add_target_track_to_sessions.py  20260515_0004_add_web_intel_risk_notes_to_plan_critiques.py  20260515_0005_add_question_metadata_to_interview_questions.py  20260517_0006_add_long_term_memories.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  candidate_job_matcher.py  candidate_profiler.py  company_researcher.py  contracts.py  evaluator.py  interview_intel_collector.py  interview_plan_critic.py  interview_planner.py  jd_analyzer.py  live_interviewer.py  report_generator.py  resume_extractor.py
backend/app/api/: main.py  schemas.py
backend/app/config/: settings.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: models.py
backend/app/graph/: __init__.py  langgraph_workflow.py  state.py  workflow.py
backend/app/ports/: __init__.py  memory.py  tools.py
backend/app/prompts/: __init__.py  interview_plan_critic.py  interview_planning.py
backend/app/providers/: __init__.py  embeddings.py  llm.py
backend/app/repositories/: documents.py  interview_artifacts.py  interview_sessions.py  memory.py  session_summary.py
backend/app/services/: __init__.py  interview_service.py  long_term_memory_store.py  memory_service.py  postgres_persistence.py  session_store.py  short_term_memory.py
backend/app/skills/: __init__.py  candidate_job_matching.py  candidate_profiling.py  company_research.py  contracts.py  evaluation.py  interview_intel.py  interview_plan_critic.py  interview_planning.py  jd_analysis.py  live_interview.py  report_generation.py  resume_extraction.py
backend/app/tools/: chunking.py  document_parsing.py  faiss_vector_store.py  in_memory_vector_store.py  knowledge_base_indexer.py  knowledge_reranker.py  knowledge_retrieval.py  langchain_adapters.py  mock_research.py  postgres_vector_store.py  streaming_ingestion.py  web_research.py  windowed_knowledge_indexer.py
backend/app/utils/: dataclass_mapping.py  serialization.py
backend/output/: chunked_国内面试准备.md
backend/scripts/: debug_preparation_graph.py  demo_end_to_end.py  demo_live_interview.py  demo_postgres_persistence.py  demo_preparation_graph.py  demo_preparation_graph_with_rag.py  demo_rag_with_knowledge_base.py  dev_backend.sh  evaluate_rag_ragas.py
docs/: backend-todo.md  interview-talking-points.md  mcp-todo.md  preparation-langgraph.mmd  resume-driven-model-review.md
(+9 files in other folders)
