[project]
name = "ai-agent-interview-assistant-backend"
version = "0.1.0"
description = "Contract-first backend for an agentic technical interview assistant."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pypdf>=4.0.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
