[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-interview-assistant-backend"
version = "0.1.0"
description = "Contract-first backend for an agentic technical interview assistant."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "certifi>=2024.2.2",
    "flashrank>=0.2.0",
    "faiss-cpu>=1.8.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi>=0.115.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pgvector>=0.3.0",
    # PyArrow wheels must match NumPy major line; pin so NumPy 2.x does not pair with old PyArrow built for NumPy 1.x.
    "pyarrow>=17.0.0",
    "python-multipart>=0.0.20",
    # RAG evaluation (standalone from app RAG indexing; pinned <0.5 for metric API stability)
    "datasets>=3.4.0",
    "ragas>=0.4.0,<0.5",
    "sqlalchemy[asyncio]>=2.0.0",
    "unstructured[docx,pdf]>=0.16.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
